# CredibleConfessions

./: .gitignore  LICENSE  README.md  build.sh
ringsig/: Cargo.toml  build.sh
ringsig/src/: armor.rs  error.rs  hashes.rs  keys.rs  lib.rs  main.rs  radix64.rs  ringsig-cli.rs  wasm.rs
ringsig/testdata/: test-key.priv  test-key.pub  test-prove.json  test-verify.json
webapp/: gatsby-config.ts  index.html  index.js  package-lock.json  package.json  style.css  verify.html  verify.js  worker.js
webapp/src/: :w  App.js  index.css
webapp/src/pages/: index.tsx
