[package]
name = "ringsig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "3", default-features = false, features = [ "u64_backend" ] }
bitcoin_hashes = { version = "0.11", default-features = false, features = [ "std" ] }

