[package]
name = "ringsig"
version = "0.1.0"
edition = "2021"

[lib]
name = "ringsig"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "3", default-features = false, features = [ "u64_backend" ] }
bitcoin_hashes = { version = "0.11", default-features = false, features = [ "std" ] }
wasm-bindgen = "0.2"
js-sys = "0.3"

