[package]
name = "ringsig"
version = "0.1.0"
edition = "2021"

[lib]
name = "ringsig"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ringsig-cli"
path = "src/ringsig-cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "3", default-features = false, features = [ "u64_backend" ] }
getrandom = { version = "0.2", default-features = false, features = [ "js" ] }
bitcoin_hashes = { version = "0.11", default-features = false, features = [ "std" ] }
serde = { version = "1", default-features = false, features = [ "derive" ] }
serde_json = { version = "1", default-features = false, features = [ "std" ] }
wasm-bindgen = "0.2"
js-sys = "0.3"
subtle = "2.4.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
home = "0.5"

